tests/baselines/reference/asyncGenerators.functionDeclaration.7.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/functionDeclarations/asyncGenerators.functionDeclaration.7.es5.ts(1,24): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es5/functionDeclarations/asyncGenerators.functionDeclaration.7.es5.ts (1 errors) ====
    async function * f(a = yield) {}
                           ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.